[b]Version 0.5.63 (not released yet)[/b]:

(2007-12-13)
 * (Windows) Added patch by codeboost to improve the file associations code.
   See http://smplayer.sourceforge.net/forums/viewtopic.php?pid=470#p470
 * (By user request) Added the possibility to configure any of the mouse
   button to show the equalizer.

(2007-12-10)
 * (Internal change) Added mplayerversion.h and mplayerversion.cpp which
   parses the mplayer version from the output of mplayer. Inforeader can also
   get the mplayer version.
 * Now the size of OSD/subtitle text increases/decreases in steps of 0.20.

(2007-12-08)
 * Added a new option for the config file: use_volume_option. If set to 
   true, smplayer will set the initial volume using the command line option
   -volume in mplayer, so that should avoid that the volume is too loud on
   startup. But... mplayer doesn't have a -volume option yet, you have to
   patch it:
   http://lists.mplayerhq.hu/pipermail/mplayer-users/2007-December/070500.html

(2007-12-05)
 * (By user request) Added a new option for the config file: 
   auto_add_to_playlist. If true, new opened files are added automatically to
   the playlist (this is the default). Otherwise the playlist won't be 
   modified unless it's strictly necessary (play a dvd, vcd, audiocd, or
   several files are opened at the same time).

(2007-12-04)
 * When a file has stopped, the screensaver won't be allowed to run until
   an additional minute has passed, so it there are more files in the
   playlist they have time to start. A minute should be enough even for
   internet streams.

(2007-11-29)
 * Now the cache setting is independent for each type of media. That means
   that you can disable cache for local files (faster startup) while keeping
   a cache for internet streams.
   The following options for the config file have been added: cache_for_files,
   cache_for_streams, cache_for_dvds, cache_for_audiocds and cache_for_vcds
   (the last two untested).